--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,7 +1,7 @@
-// Define the Sass variable for the text color
+// Define Sass variable for text color
 $text-color: #3D3D3D;
 
-// Apply the text color to the body and p tags
+// Apply text color to body and p tags
 body {
   color: $text-color;
 }
