--- a/sass_scss/2-color_variables.scss
+++ b/sass_scss/2-color_variables.scss
@@ -1,8 +1,8 @@
-// Define the Sass variable for the text color
+// Define Sass variable for text color
 $text-color: #3D3D3D;
 $background-color: #6d6d6d;
 
-// Apply the text color to the body and p tags
+// Apply text color to body and p tags
 body {
   color: $text-color;
   background-color: $background-color;
